Add run button for mobile

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Game Of Life</title>
-    <link rel="stylesheet" href="./css/style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Game Of Life</title>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
 
-  <body>
-    <script src="./js/vector.js" charset="utf-8"></script>
-    <script src="./js/loop.js" charset="utf-8"></script>
-    <script src="./js/layer.js" charset="utf-8"></script>
-    <script src="./js/camera2D.js" charset="utf-8"></script>
-    <script src="./js/keyControls.js" charset="utf-8"></script>
-    <script src="./js/mouseControls.js" charset="utf-8"></script>
-    <script src="./js/script.js" charset="utf-8"></script>
-  </body>
+<body>
+  <div class="btn btn--run"></div>
+  <script src="./js/vector.js" charset="utf-8"></script>
+  <script src="./js/loop.js" charset="utf-8"></script>
+  <script src="./js/layer.js" charset="utf-8"></script>
+  <script src="./js/camera2D.js" charset="utf-8"></script>
+  <script src="./js/keyControls.js" charset="utf-8"></script>
+  <script src="./js/mouseControls.js" charset="utf-8"></script>
+  <script src="./js/script.js" charset="utf-8"></script>
+</body>
 
 </html>
