--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
   <div class="btn btn--run"></div>
+  <div class="btn btn__zoom--out"></div>
+  <div class="btn btn__zoom--in"></div>
   <script src="./js/vector.js" charset="utf-8"></script>
   <script src="./js/loop.js" charset="utf-8"></script>
   <script src="./js/layer.js" charset="utf-8"></script>
