Few buttons and optimizations for mobile

--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
 </head>
 
 <body>
-  <div class="btn btn--run"></div>
-  <div class="btn btn__zoom--out"></div>
-  <div class="btn btn__zoom--in"></div>
+  <div class="ui__bottom">
+    <div class="ui__left">
+      <div class="btn btn--save"></div>
+      <div class="btn btn--load"></div>
+    </div>
+    <div class="ui__center">
+      <div class="btn btn--run"></div>
+    </div>
+    <div class="ui__right">
+      <div class="btn btn__zoom--out"></div>
+      <div class="btn btn__zoom--in"></div>
+    </div>
+  </div>
   <script src="./js/vector.js" charset="utf-8"></script>
   <script src="./js/loop.js" charset="utf-8"></script>
   <script src="./js/layer.js" charset="utf-8"></script>
